# AALSDK

./: .gitignore  .gitmodules  README.md  Readme.MultiPackage.txt  aalsdk.sln  aalsdk.vcxproj  create-dist  prep-build  prep-build.bat
aalkernel/: AAL_Driver_Package.vcxproj  COPYING  ChangeLog  Makefile.am  README  aalkernel.inf  aalkernel.vcxproj  aalkernel.vcxproj.filters  configure.ac  ntsd.ini
aalkernel/aal_uidriver/: Kbuild.in  Makefile.am  aalui-events-int.h  aaluidrv-file.c  aaluidrv-int.h  aaluidrv-main-linux.c  aaluidrv-message.c  aaluidrv-mmap-linux.c
aalkernel/aalbus/: Kbuild.in  Makefile.am  aalbus-device.c  aalbus-int.h  aalbus-main.c
aalkernel/aalbus_windows/: aalbus-device.c  aalbus.c  aalbus.inx  aalbus.mof  aalbus.vcxproj  aalbus.vcxproj.filters  aalbus_configcntrl.c  aalbus_configmon_msgs.c  aalbus_configmonitor.c  aalbus_events.h  aalbus_internal.h  aalbus_pdo.c  aalbus_poll.c  aalbus_poll.h  aalbus_session.c  aalbus_session.h  resource.h  wmi.c
aalkernel/aalkernel Package/: aalkernel Package.vcxproj
aalkernel/aalresourcemgr_client/: Kbuild.in  Makefile.am  aalrm-events-int.h  aalrm-file.c  aalrm-int.h  aalrm-ioctl.c  aalrm-main.c
aalkernel/aalresourcemgr_server/: Kbuild.in  Makefile.am  aalrm_server-file.c  aalrm_server-int.h  aalrm_server-ioctl.c  aalrm_server-main.c  aalrm_server-services.c  aalrms-events-int.h
aalkernel/cci_PCIe_driver/: Kbuild.in  Makefile  Makefile.am  aal_ccip_driver.inf  cci_pcie_common.c  cci_pcie_driver_PIPsession.c  cci_pcie_driver_PIPsession.h  cci_pcie_driver_internal.h  cci_pcie_driver_main.c  cci_pcie_driver_main_linux.c  cci_pcie_driver_main_windows.c  cci_pcie_driver_pdde.c  cci_pcie_driver_pdde_linux.c  cci_pcie_driver_simulator.c  cci_pcie_driver_simulator.h  cci_pcie_driver_umapi.c  cci_pcie_driver_umapi.h  cci_pcie_driver_umapi_common.c  cci_pcie_driver_umapi_linux.c  cci_pcie_driver_umapi_linux.h  cci_pcie_driver_umapi_windows.c  cci_pcie_windows.h  ccip.vcxproj  ccip.vcxproj.filters  ccip_afu.c  ccip_defs.h  ccip_fme.c  ccip_fme.h  ccip_fme_mmap_linux.c  ccip_fme_mmap_windows.c  ccip_fme_mmio.c  ccip_fme_mmio.h  ccip_logging.c  ccip_logging.h  ccip_logging_linux.c  ccip_logging_linux.h  ccip_perfmon.c  ccip_perfmon.h  ccip_perfmon_linux.c  ccip_perfmon_linux.h  (+11 more)
aalkernel/cciv4_driver/: Kbuild.in  Makefile.am  ccip_def.h  ccip_fme_mmio.c  ccip_fme_mmio.h  ccip_perf_counters.c  ccip_perf_counters.h  ccip_port_mmio.c  ccip_port_mmio.h  ccip_sim_mmio.c  cciv4_PIPsession.c  cciv4_PIPsession.h  cciv4_common.c  cciv4_driver_internal.h  cciv4_driver_main.c  cciv4_sim_afu_mmap.c  cciv4_sim_afu_pip.c  cciv4_sim_mafu_pip.c  cciv4_simulator.c  cciv4_simulator.h  kernver-utils.h
aalkernel/kOSAL/: kOSAL.c
aalkernel/m4/: aalkernel.m4
aalkernel/spl2_pip_dksm/: Kbuild.in  Makefile.am  buf-desc-table-impl.h  buf-desc-table.h  buf-desc.h  buf-mem-type.h  cci3_afu_pip.c  cci3_pip_mmap.c  kernver-utils.h  mem-internal-fops.h  mem-internal-ioctl.h  mem-pte.h  mem-sess.h  mem-virt-impl.h  mem-virt.h  spl2_afu_pip.c  spl2_mafu_pip.c  spl2_pip_internal.h  spl2_pip_main.c  spl2_pip_mmap.c  spl2_pip_nopcie.c  spl2_pip_public.h  spl2_primitives.c  spl2_session.c  spl2_session.h  spl2diag.h  spl2mem-kern.h  spl2mem.h  xsid.h
aaluser/: COPYING  ChangeLog  Makefile.am  configure.ac
aaluser/RegistrarRepository/: AASRegistrarDatabase.linux  AASRegistrarDatabase.win  AASRegistrarDatabase.win.backup  GenDB.linux  GenDB.win
aaluser/ase/: LICENSE.txt  Makefile  Makefile.internal  Makefile.shippable  README  ase.cfg  ase_regress.sh  ase_sources.mk  coverage.sh  debug_build.sh  distclean.sh  mentor_vlog.help  run.sh  scan-build.help  vlog_files.list
aaluser/clp/: Makefile.am  aalclp.l  libaalclp.vcxproj  libaalclp.vcxproj.filters
aaluser/doc/: Doxyfile.in
aaluser/m4/: aalsdk.m4  doxygen.m4
aaluser/utils/: Makefile.am
aaluser/win/: WINAALSDK.sln  WinBuild.bat  aalsdk_build.bat  aalsdk_win7_debug_win32.bat  aalsdk_win7_debug_x64.bat  aalsdk_win7_release_win32.bat  aalsdk_win7_release_x64.bat  aalsdk_win8.1_debug_win32.bat  aalsdk_win8.1_debug_x64.bat  aalsdk_win8.1_release_win32.bat  aalsdk_win8.1_release_x64.bat  aalsdk_win8_debug_win32.bat  aalsdk_win8_debug_x64.bat  aalsdk_win8_release_win32.bat  aalsdk_win8_release_x64.bat  config.h
swval/krnl/: AUTHORS  COPYING  ChangeLog  INSTALL  Makefile.am  NEWS  README  README.GPLV2-LICENSE.TXT  aalbus  aalresourcemgr_client  aalresourcemgr_server  cci_PCIe_driver  configure.ac  include  kOSAL
swval/sdk/: AUTHORS  COPYING  ChangeLog  INSTALL  Makefile.am  NEWS  README  RegistrarRepository  aas  ase  clp  configure.ac  include  utils
valapps/: CMakeLists.txt  CPackConfig.cmake.in  Doxyfile.in  Makefile  build.json.in  buildenv.py  env.sh  env.sh.in  fetchers.py  installers.py  ld_library_path  packages.json  readme.md  readme.txt  runit.py  services.json  services.md  tests.json  tests.md  unpackers.py  valapps.py
valapps/AFU_Reset/: AFU_Reset.h  CMakeLists.txt  Makefile  SW_RESET_01  __init__.py  expected.txt  main.cpp  runtest.cmake  runtest.sh
valapps/DMA_Buffer/: CMakeLists.txt  Makefile  SW_BUF_01_04  SW_BUF_02  __init__.py  main.cpp  runtest.sh  runtest_request_write.cmake
valapps/DMA_Buffer_5/: DMABuffer5.h  Makefile  SW_BUF_05  __init__.py  main.cpp
valapps/Error/: Makefile  main.cpp
valapps/MMIO_Mapping/: MMIOmapping.h  Makefile  SW_LOAD_AFU  SW_MMIO_MAPPING  __init__.py  main.cpp
valapps/PartialReconf_Power/: Makefile  main.cpp
valapps/Partial_Reconfig/: Makefile  SW_PR_SINGLE_APP  SW_PR_TWO_APP  __init__.py  main.cpp
valapps/Platform_Power/: ReadMe  verify_fpga_function  verify_fpga_function_vf
valapps/Power_Thermal/: Makefile  main.cpp
valapps/RAS/: Makefile  main.cpp
valapps/Read_Perf_Counters/: Makefile  SW_PERC_01  __init__.py  breakpoints  gdbinit  main.cpp  run-gdb
valapps/Signal_Tap/: Makefile  SW_STAP_01  SigTap_README.txt  __init__.py  main.cpp
valapps/UMsg_Allocation/: Makefile  UMsg_README.txt  main.cpp
valapps/appbase/: CMakeLists.txt  Makefile  appbase.cpp  appbase.h  appbase.h.in  appbuffer.cpp  appbuffer.h.in  appconstants.cpp  (+3 more)
(+1442 files in other folders)
